--- a/style.css
+++ b/style.css
@@ -258,17 +258,27 @@ header{
 
 /*content*/
 .content{
-    padding: 4.5rem 0;
-    /* width: auto; */
-    max-width: 500px;
+    padding: 2rem 0;
 }
 .content-text{
     margin: 2rem 5%;
 }
-.content-text pre{
+.content-text p{
     font-size: 1.1rem;
     padding: 0.6rem 0;
     opacity: 0.8;
+}
+pre {
+    white-space: pre-wrap;
+    /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */
 }
 
 /* about */
@@ -284,36 +294,30 @@ header{
     opacity: 0.8;
 }
 
+.snav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 5px;
+}
+
+.snav-button{
+    outline:0;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    display:flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 /* footer */
 footer{
     background: var(--exDark);
     color: #fff;
     text-align: center;
     padding: 2rem 0;
-}
-.social-links{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 1.4rem;
-}
-.social-links a{
-    border: 2px solid #fff;
-    color: #fff;
-    display: block;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    text-decoration: none;
-    margin: 0 0.3rem;
-    transition: all 0.5s ease;
-}
-
-.social-links a:hover{
-    background: #fff;
-    color: var(--exDark);
 }
 .footer span{
     margin-top: 1rem;
