--- a/style.css
+++ b/style.css
@@ -66,6 +66,17 @@ header{
 .navbar-nav a:hover{
     opacity: 0.7;
 }
+.home-link{
+    color: #ffffff;
+    font-size: 1.2rem;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-family: var(--Playfair);
+    letter-spacing: 1px;
+    padding: 1rem 0;
+
+}
 .banner{
     flex: 1;
     display: flex;
