--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ header{
     color: #fff;
     text-decoration: none;
     display: inline-block;
-    padding: 0.4rem 0.1rem;
+    padding: 0.4rem 0.2rem;
     letter-spacing: 3px;
     transition: opacity 0.5s ease;
 }
@@ -94,12 +94,14 @@ header{
     font-family: var(--Playfair);
     color: var(--exDark);
 }
-.banner p{
+.banner p,a{
     padding: 1rem 0 2rem 0;
     font-size: 1.2rem;
     font-family: var(--Roboto);
     font-weight: 300;
     word-spacing: 2px;
+    text-decoration: none;
+    color: #ffffff;
 }
 .banner i{
     padding: 1rem 0 2rem 0;
